modifed swagger
