# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  app.Pager:
+    properties:
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total_rows:
+        type: integer
+    type: object
   errcode.Error:
     type: object
   model.Article:
@@ -28,6 +37,15 @@ definitions:
       title:
         type: string
     type: object
+  model.ArticleSwagger:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/model.Article'
+        type: array
+      pager:
+        $ref: '#/definitions/app.Pager'
+    type: object
   model.Tag:
     properties:
       created_by:
@@ -49,10 +67,19 @@ definitions:
       state:
         type: integer
     type: object
+  model.TagSwagger:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/model.Tag'
+        type: array
+      pager:
+        $ref: '#/definitions/app.Pager'
+    type: object
 info:
   contact: {}
   description: Golang
-  termsOfService: https://github.com/julianlee107@gin-blog
+  termsOfService: https://github.com/julianlee107/gin-blog
   title: 博客系统
   version: "2.0"
 paths:
@@ -84,7 +111,7 @@ paths:
           description: 成功
           schema:
             items:
-              $ref: '#/definitions/model.Article'
+              $ref: '#/definitions/model.ArticleSwagger'
             type: array
         "400":
           description: 请求错误
@@ -266,7 +293,7 @@ paths:
           description: 成功
           schema:
             items:
-              $ref: '#/definitions/model.Article'
+              $ref: '#/definitions/model.TagSwagger'
             type: array
         "400":
           description: 请求错误
