# internal/routers/api/v1/article.go
@@ -30,7 +30,7 @@ func (a Article) Get(c *gin.Context) {
 // @Param state query int false "状态" Emums(0,1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {array} model.Article "成功"
+// @Success 200 {array} model.ArticleSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "请求错误"
 // @Router /api/v1/article [get]
