# internal/routers/api/v1/tag.go
@@ -25,7 +25,7 @@ func (t Tag) Get(c *gin.Context) {
 // @Param state query int false "状态" Emums(0,1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {array} model.Article "成功"
+// @Success 200 {array} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "请求错误"
 // @Router /api/v1/tags [get]
